Revert some changes

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,8 +173,7 @@ jobs:
     executor: check-image
     steps:
       - checkout
-      - run: npm i npm-run-all
-      - run: npm run test:performance-ci || true
+      - run: npm run test:e2e:performance || true
   build-linux:
     executor: wine-mono
     steps:
