--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -175,7 +175,7 @@ jobs:
       - checkout
       - update_image:
           apt_opts: "--no-install-recommends"
-      - run: npm run test:e2e:performance || true
+      - run: ELECTRON_DISABLE_SANDBOX=1 npm run test:e2e:performance || true
       - save_cache:
           key: lint-{{ arch }}-{{ .Branch }}-{{ checksum "package-lock.json" }}
           paths:
