--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "test": "npm-run-all lint:js test:unit test:e2e",
     "test:docker": "node scripts/setup_e2e_docker.js",
     "test:e2e": "cross-env NODE_ENV=test npm-run-all build build-robotjs test:e2e:build test:e2e:run",
-    "test:e2e:performance": "cross-env NODE_ENV=test PERFORMANCE=true npm-run-all build build-robotjs test:e2e:build test:e2e:performance-run",
-    "test:e2e:performance-run": "electron-mocha -r @babel/register --reporter list dist/tests/e2e_bundle.js",
+    "test:e2e:performance": "cross-env NODE_ENV=test PERFORMANCE=true npm-run-all build build-robotjs test:e2e:build-performance test:e2e:run-performance test:e2e:performance:report",
     "test:e2e:nobuild": "cross-env NODE_ENV=test npm-run-all test:e2e:build test:e2e:run",
     "test:e2e:build": "webpack-cli --config webpack.config.test.js",
+    "test:e2e:build-performance": "webpack-cli --config webpack.config.performance.test.js",
+    "test:e2e:run-performance": "electron-mocha -r @babel/register --reporter json --reporter-option output=./e2e/performance/perf-test-report.json dist/tests/e2e_bundle.js",
+    "test:e2e:performance:report": "node ./e2e/performance/report-check.js",
     "test:e2e:run": "electron-mocha -r @babel/register --reporter mochawesome dist/tests/e2e_bundle.js",
     "test:e2e:send-report": "node ./e2e/save_report.js",
     "test:unit": "jest",
@@ -141,6 +143,7 @@
     "@bloomberg/record-tuple-polyfill": "^0.0.4",
     "@electron/fuses": "1.6.0",
     "@electron/universal": "1.3.1",
+    "@mattermost/compass-icons": "0.1.32",
     "@storybook/addon-actions": "6.4.20",
     "@storybook/react": "6.4.20",
     "@types/auto-launch": "5.0.2",
@@ -154,20 +157,29 @@
     "@typescript-eslint/eslint-plugin": "5.18.0",
     "@typescript-eslint/parser": "5.18.0",
     "7zip-bin": "5.1.1",
+    "auto-launch": "5.0.5",
     "aws-sdk": "^2.1190.0",
     "axios": "0.26.1",
     "babel-eslint": "10.1.0",
     "babel-loader": "8.2.4",
+    "bootstrap": "4.6.1",
+    "bootstrap-dark": "1.0.3",
     "chai": "4.3.6",
+    "classnames": "2.3.1",
     "copy-webpack-plugin": "10.2.4",
     "cross-env": "7.0.3",
     "css-loader": "6.7.1",
     "electron": "21.2.0",
     "electron-builder": "23.3.3",
     "electron-connect": "0.6.3",
+    "electron-context-menu": "3.5.0",
+    "electron-devtools-installer": "3.2.0",
+    "electron-is-dev": "2.0.0",
+    "electron-log": "4.4.8",
     "electron-mocha": "11.0.2",
     "electron-notarize": "1.2.1",
     "electron-rebuild": "3.2.9",
+    "electron-updater": "5.2.1",
     "eslint": "7.29.0",
     "eslint-import-resolver-webpack": "0.13.2",
     "eslint-plugin-babel": "5.3.1",
@@ -178,8 +190,10 @@
     "eslint-plugin-no-only-tests": "2.6.0",
     "eslint-plugin-react": "7.29.4",
     "eslint-plugin-react-hooks": "4.4.0",
+    "fs-extra": "10.0.1",
     "jest": "27.5.1",
     "jest-junit": "13.1.0",
+    "joi": "17.6.0",
     "mini-css-extract-plugin": "2.6.0",
     "mmjstool": "github:mattermost/mattermost-utilities#3b4506b0f6b14fbb402f9f8ef932370e459e3773",
     "mocha-circleci-reporter": "0.0.3",
@@ -190,40 +204,28 @@
     "node-loader": "2.0.0",
     "npm-run-all": "4.1.5",
     "playwright": "1.28.1",
-    "ps-node": "^0.1.6",
-    "recursive-readdir": "^2.2.2",
-    "robotjs": "0.6.0",
-    "sass-loader": "12.6.0",
-    "shebang-loader": "0.0.1",
-    "style-loader": "3.3.1",
-    "ts-prune": "0.10.3",
-    "typescript": "4.6.3",
-    "webpack": "5.71.0",
-    "webpack-cli": "4.10.0",
-    "webpack-dev-server": "4.8.0",
-    "webpack-merge": "5.8.0",
-    "@mattermost/compass-icons": "0.1.32",
-    "auto-launch": "5.0.5",
-    "bootstrap": "4.6.1",
-    "bootstrap-dark": "1.0.3",
-    "classnames": "2.3.1",
-    "electron-context-menu": "3.5.0",
-    "electron-devtools-installer": "3.2.0",
-    "electron-is-dev": "2.0.0",
-    "electron-log": "4.4.8",
-    "electron-updater": "5.2.1",
-    "fs-extra": "10.0.1",
-    "joi": "17.6.0",
     "pretty-bytes": "6.0.0",
+    "ps-node": "^0.1.6",
     "react": "16.14.0",
     "react-beautiful-dnd": "13.1.0",
     "react-bootstrap": "1.6.4",
     "react-dom": "16.14.0",
     "react-intl": "5.20.10",
     "react-select": "5.2.2",
+    "recursive-readdir": "^2.2.2",
+    "robotjs": "0.6.0",
     "sass": "1.49.11",
+    "sass-loader": "12.6.0",
     "semver": "7.3.5",
+    "shebang-loader": "0.0.1",
+    "style-loader": "3.3.1",
+    "ts-prune": "0.10.3",
+    "typescript": "4.6.3",
     "valid-url": "1.0.9",
+    "webpack": "5.71.0",
+    "webpack-cli": "4.10.0",
+    "webpack-dev-server": "4.8.0",
+    "webpack-merge": "5.8.0",
     "winreg-utf8": "0.1.1",
     "yargs": "17.4.0"
   },
