Use measudePerformance function instead

--- a/package.json
+++ b/package.json
@@ -42,12 +42,11 @@
     "test": "npm-run-all lint:js test:unit test:e2e",
     "test:docker": "node scripts/setup_e2e_docker.js",
     "test:e2e": "cross-env NODE_ENV=test npm-run-all build build-robotjs test:e2e:build test:e2e:run",
-    "test:e2e:performance": "cross-env NODE_ENV=test PERFORMANCE=true npm-run-all build build-robotjs test:e2e:build-performance test:e2e:run-performance test:e2e:performance:report",
+    "test:e2e:performance": "cross-env NODE_ENV=test PERFORMANCE=true npm-run-all build build-robotjs test:e2e:build-performance test:e2e:run-performance",
     "test:e2e:nobuild": "cross-env NODE_ENV=test npm-run-all test:e2e:build test:e2e:run",
     "test:e2e:build": "webpack-cli --config webpack.config.test.js",
     "test:e2e:build-performance": "webpack-cli --config webpack.config.performance.test.js",
-    "test:e2e:run-performance": "electron-mocha -r @babel/register --reporter json --reporter-option output=./e2e/performance/perf-test-report.json dist/tests/e2e_bundle.js",
-    "test:e2e:performance:report": "node ./e2e/performance/report-check.js",
+    "test:e2e:run-performance": "electron-mocha -r @babel/register --reporter list dist/tests/e2e_bundle.js",
     "test:e2e:run": "electron-mocha -r @babel/register --reporter mochawesome dist/tests/e2e_bundle.js",
     "test:e2e:send-report": "node ./e2e/save_report.js",
     "test:unit": "jest",
