--- a/.github/workflows/ci-perf.yml
+++ b/.github/workflows/ci-perf.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest]
+        os: [ubuntu-latest]
         node-version: [16]
 
     steps:
@@ -27,4 +27,4 @@ jobs:
       run: npm ci
 
     - name: E2E Performance Test for Electron 🧪
-      run: ELECTRON_DISABLE_SANDBOX=1 npm run test:e2e:performance || true
+      run: ELECTRON_DISABLE_SANDBOX=1 npm run test:e2e:performance:ci
