--- a/.github/workflows/ci-perf.yml
+++ b/.github/workflows/ci-perf.yml
@@ -24,7 +24,7 @@ jobs:
         cache: 'npm'
 
     - name: Install ubuntu packages
-      run: apt-get install libxtst-dev libpng++-dev
+      run: sudo apt-get install libxtst-dev libpng++-dev
       if: runner.os == 'Linux'
 
     - name: Install dependencies 👨🏻‍💻
