--- a/.github/workflows/ci-perf.yml
+++ b/.github/workflows/ci-perf.yml
@@ -24,7 +24,7 @@ jobs:
         cache: 'npm'
 
     - name: Install ubuntu packages
-      run: sudo apt-get install libxtst-dev libpng++-dev libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+      run: sudo apt-get install libxtst-dev libpng++-dev
       if: runner.os == 'Linux'
 
     - name: Install dependencies 👨🏻‍💻
