Revert "ADd sudo"
This reverts commit acb95e02609e7cc02b12863910d29c03694936c1.

--- a/.github/workflows/ci-perf.yml
+++ b/.github/workflows/ci-perf.yml
@@ -24,7 +24,7 @@ jobs:
         cache: 'npm'
 
     - name: Install ubuntu packages
-      run: sudo apt-get install libxtst-dev libpng++-dev
+      run: apt-get install libxtst-dev libpng++-dev
       if: runner.os == 'Linux'
 
     - name: Install dependencies 👨🏻‍💻
