--- a/.github/workflows/ci-perf.yml
+++ b/.github/workflows/ci-perf.yml
@@ -24,8 +24,10 @@ jobs:
         cache: 'npm'
 
     - name: Install ubuntu packages
-      run: apt-get install libxtst-dev libpng++-dev
-      if: runner.os == 'Linux'
+      run: |
+        if [ "$RUNNER_OS" == "Linux" ]; then
+            apt-get install libxtst-dev libpng++-dev
+      shell: bash
 
     - name: Install dependencies 👨🏻‍💻
       run: npm ci
