--- a/.github/workflows/ci-perf.yml
+++ b/.github/workflows/ci-perf.yml
@@ -30,4 +30,4 @@ jobs:
       run: npm ci
 
     - name: E2E Performance Test for Electron 🧪
-      run: xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- ELECTRON_DISABLE_SANDBOX=1 npm run test:e2e:performance
+      run: ELECTRON_DISABLE_SANDBOX=1 xvfb-run --auto-servernum --server-args="-screen 0 1280x960x24" -- npm run test:e2e:performance
